set the title of the window to "bookmark manager" when managing bookmarks and return to the previous title when going back to web page (bug 199790)